# wghub

./: .env.development  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  package-lock.json  package.json
.github/workflows/: actions.yaml
public/: index.html
rust/wghub-backend/: Cargo.toml
rust/wghub-backend/src/: app_state.rs  main.rs  ws_session.rs
rust/wghub-backend/src/api/: hubs.rs  mod.rs  spokes.rs
rust/wghub-backend/src/persist/: in_mem.rs  mod.rs  mongo.rs
rust/wghub-rust/: Cargo.toml
rust/wghub-rust-web/: Cargo.toml
rust/wghub-rust-web/.cargo/: config.toml
rust/wghub-rust-web/src/: lib.rs  utils.rs  wrapper.rs  ws.rs
rust/wghub-rust/src/: lib.rs
rust/wghub-rust/src/model/: hub.rs  hub_config.rs  hub_data.rs  message.rs  mod.rs  spoke.rs  spoke_data.rs
rust/wghub-rust/src/model/config/: hub_config.rs  hub_data.rs  spoke_common_data.rs  spoke_config.rs  spoke_data.rs
src/: App.tsx  AppContext.ts  Dialog.tsx  EditFieldDialog.tsx  FloatingActionButton.tsx  HubDisplay.tsx  ImpExpFooter.tsx  NewHubDialog.tsx  NewSpokeDialog.tsx  SpokeList.tsx  SpokeListSecondary.tsx  SubmitOrCancel.tsx  Warning.tsx  index.tsx  style.scss  ui-util.tsx  util.ts
src/app/: store.ts
src/features/: api.ts
src/features/hubs/: hubsSlice.ts
src/features/spokes/: spokesSlice.ts
src/model/: Hub.ts  Spoke.ts
wghub-backend/: Cargo.toml
wghub-backend/src/: lib.rs  main.rs
wghub-backend/src/api/: hubs.rs  spokes.rs  util.rs
wghub-backend/src/persist/: in_mem.rs  mod.rs  mongo.rs
wghub-frontend/: Cargo.toml
wghub-frontend/src/: lib.rs  utils.rs
wghub-shared/: Cargo.toml
wghub-shared/src/: lib.rs
wghub-shared/src/model/: hub.rs  spoke.rs
wghub-shared/src/model/config/: hub_config.rs  hub_data.rs  spoke_config.rs
wghub-ui/: package-lock.json  package.json  vite.config.ts
wghub-ui/src/: App.tsx  Dialog.tsx  EditFieldDialog.tsx  FloatingActionButton.tsx  HubDisplay.tsx  ImpExpFooter.tsx  NewHubDialog.tsx  NewSpokeDialog.tsx  SpokeList.tsx  SpokeListSecondary.tsx  main.tsx  ui-util.tsx
wghub-ui/src/app/: store.ts
wghub-ui/src/features/: api.ts
