[package]
name = "wghub-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
tokio = { version = "1.32.0", features = ["full"] }
futures-util = { version = "0.3.28" }
wghub-rust = { path = "../wghub-rust", features = ["axum"] }
mongodb = { version = "2.6.1"}
async-trait = { version = "0.1.73"}