[package]
name = "wghub-backend"
version = "0.1.0"
edition = "2021"
default-run = "wghub-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20"}
tokio = { version = "1.40.0", features = ["full"] }
futures-util = { version = "0.3.28" }
wghub-rust = { path = "../wghub-rust", features = ["backend"] }
mongodb = { version = "3.1.0"}
uuid = { version = "1.10.0", features = ["serde"] }
async-trait = { version = "0.1.73"}