[package]
name = "wghub-rust"
version = "0.1.0"
edition = "2021"

[features]
frontend = ["wasm-bindgen", "uuid/js", "js-sys", "serde-wasm-bindgen"]
serde-wasm-bindgen = ["dep:serde-wasm-bindgen"]

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.11.0", features = ["serde", "v4", "js"] }
wasm-bindgen = { version = "0.2.95", optional = true }
js-sys = { version = "0.3.72", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
serde_json = "1.0.131"
